--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,15 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.6.0",
         "nikic/php-parser": "^3.0"
     },
     "autoload": {
         "psr-4": {
             "Sunlight\\ExtendParser\\": "src"
         }
+    },
+    "config": {
+        "platform": {"php": "5.6"}
     }
 }
