--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=7.1",
+        "ext-json": "*",
         "nikic/php-parser": "^3.0"
     },
     "autoload": {
@@ -11,6 +12,6 @@
         }
     },
     "config": {
-        "platform": {"php": "5.6"}
+        "platform": {"php": "7.1"}
     }
 }
